--- a/aidevmeetup-demo/calculator/tsconfig.json
+++ b/aidevmeetup-demo/calculator/tsconfig.json
@@ -14,10 +14,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"skipLibCheck": true,
-		"types": [
-			"node",
-			"worker-configuration.d.ts"
-		]
+		"types": ["node", "worker-configuration.d.ts"]
 	},
 	"include": ["worker-configuration.d.ts", "src/**/*.ts"]
 }
